--- a/_posts/2021-01-12-日语打卡.md
+++ b/_posts/2021-01-12-日语打卡.md
@@ -2,7 +2,7 @@
 layout: post
 title:  1月12日打卡
 subtitle: N1语法
-date: 2021年1月12日
+date: 2021-01-12
 author: 冒一个大泡泡
 header-img: img/yuki-post-bg.png
 catalog:  true
